--- a/app/src/main/res/layout-land/content_crop_inventory_seeds_manager.xml
+++ b/app/src/main/res/layout-land/content_crop_inventory_seeds_manager.xml
@@ -21,8 +21,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                android:layout_marginEnd="12dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -56,7 +62,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                android:layout_marginStart="12dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -83,11 +91,11 @@
                         android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
-
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="10dp"
                 android:orientation="vertical"
                 android:id="@+id/layout_cattle_breeding_natural_service"
 
@@ -95,8 +103,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginBottom="10dp">
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="12dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -120,7 +134,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginBottom="10dp">
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_weight="1">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -133,7 +149,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/input_shapes_grey_spinner">
+                        android:background="@drawable/input_shapes_grey_spinner"
+                        android:padding="3.4dp">
                     <Spinner
                         android:id="@+id/sp_crop_seed_type"
                         android:layout_width="match_parent"
@@ -144,6 +161,7 @@
                         android:entries="@array/seed_inventory_seed_type"
                         />
                     </LinearLayout>
+                </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -178,7 +196,7 @@
                     <LinearLayout
                         android:layout_width="25dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginEnd="12dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
@@ -206,7 +224,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_weight="1"
-
+                        android:layout_marginStart="12dp"
                         >
                         <TextView
 
@@ -261,7 +279,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_weight="1"
-                        android:layout_marginRight="10dp">
+                        android:layout_marginEnd="12dp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -284,7 +302,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:layout_marginStart="12dp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -314,7 +333,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_weight="1"
-                        android:layout_marginRight="10dp">
+                        android:layout_marginEnd="12dp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -338,7 +357,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:layout_marginStart="12dp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -380,7 +400,9 @@
                 android:drawableTint="#ffffff"
                 android:text="Save "
                 android:textAllCaps="false"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_marginStart="100dp"
+                android:layout_marginEnd="100dp"/>
 
         </LinearLayout>
 
