--- a/app/src/main/res/layout/content_crop_notes_manager.xml
+++ b/app/src/main/res/layout/content_crop_notes_manager.xml
@@ -165,7 +165,9 @@
                 android:drawableTint="#ffffff"
                 android:text="Save "
                 android:textAllCaps="false"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_marginStart="100dp"
+                android:layout_marginEnd="100dp"/>
 
 
 
