--- a/app/src/main/res/layout-land/activity_crop_field_manager.xml
+++ b/app/src/main/res/layout-land/activity_crop_field_manager.xml
@@ -35,12 +35,17 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
 
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:layout_marginEnd="12dp">
 
             <TextView
 
@@ -70,7 +75,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:layout_marginStart="12dp">
 
             <TextView
 
@@ -85,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_shapes_grey_spinner"
-
+                android:padding="3.4dp"
                 >
 
             <Spinner
@@ -102,11 +109,18 @@
             </LinearLayout>
 
         </LinearLayout>
+</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="12dp"
+            android:layout_weight="1">
 
             <TextView
 
@@ -141,7 +155,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:layout_marginStart="12dp">
 
             <TextView
 
@@ -171,11 +187,18 @@
                 />
             </LinearLayout>
         </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="15dp"
+            android:layout_weight="1"
+            android:layout_marginEnd="12dp"
             >
 
             <TextView
@@ -210,7 +233,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:layout_marginStart="12dp">
 
             <TextView
 
@@ -239,12 +264,18 @@
              />
             </LinearLayout>
         </LinearLayout>
-
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:layout_marginEnd="12dp">
 
             <TextView
 
@@ -274,13 +305,48 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:layout_marginStart="12dp">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/units"
+                android:layout_weight="0.5"
+                android:textColor="@color/textColor"
+                android:textSize="16sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_shapes_grey_spinner"
+
+                >
+
+                <Spinner
+                    android:id="@+id/sp_crop_field_units"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/crop_field_units"
+                    android:inputType="numberDecimal"
+                    style="@style/MySpinnerLook"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginBottom="10dp">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-
+                android:layout_weight="1"
+                android:layout_marginEnd="12dp"
                >
 
             <TextView
@@ -295,7 +361,7 @@
 
             <EditText
                 android:id="@+id/txt_crop_field_total_area"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Enter.."
@@ -303,7 +369,7 @@
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes"
                 android:text="0"
-                android:layout_marginRight="10dp"
+
 
                 />
             </LinearLayout>
@@ -311,7 +377,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                >
+                android:layout_weight="1"
+                android:layout_marginStart="12dp">
             <TextView
 
                 android:layout_width="wrap_content"
@@ -334,37 +401,7 @@
             </LinearLayout>
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp">
 
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/units"
-                android:layout_weight="0.5"
-                android:textColor="@color/textColor"
-                android:textSize="16sp" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes_grey_spinner"
-
-                >
-
-            <Spinner
-                android:id="@+id/sp_crop_field_units"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/crop_field_units"
-                android:inputType="numberDecimal"
-                style="@style/MySpinnerLook"
-              />
-            </LinearLayout>
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -385,6 +422,8 @@
             android:textAllCaps="false"
             android:textColor="#ffffff"
             style="@style/Button"
+            android:layout_marginStart="100dp"
+            android:layout_marginEnd="100dp"
             />
 
 
