--- a/app/src/main/res/layout-land/activity_crop_income__expense_manager.xml
+++ b/app/src/main/res/layout-land/activity_crop_income__expense_manager.xml
@@ -30,7 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -56,7 +56,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="12dp">
 
                     <TextView
 
@@ -97,7 +98,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -126,7 +127,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="12dp">
 
                     <TextView
 
@@ -162,7 +164,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -196,7 +198,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="12dp">
 
                     <TextView
 
@@ -232,7 +235,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -284,7 +287,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="12dp">
 
                     <TextView
 
@@ -346,7 +350,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_weight="1">
                     <TextView
 
@@ -399,7 +403,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="12dp">
 
                     <TextView
 
@@ -425,12 +430,18 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="12dp"
+                android:layout_weight="1">
 
                 <TextView
 
@@ -467,7 +478,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="12dp"
+                android:layout_weight="1">
 
 
                 <LinearLayout
@@ -535,7 +548,7 @@
 
             </LinearLayout>
 
-
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -545,11 +558,17 @@
 
 
             </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="12dp">
 
                 <TextView
 
@@ -572,7 +591,27 @@
 
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="12dp"
+                android:visibility="invisible"
+                >
+                <TextView
 
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    android:layout_marginBottom="4dp" />
+
+
+            </LinearLayout>
+        </LinearLayout>
 
             <Button
                 android:id="@+id/btn_save"
@@ -584,7 +623,9 @@
                 android:drawableTint="#ffffff"
                 android:text="Save "
                 android:textAllCaps="false"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_marginStart="100dp"
+                android:layout_marginEnd="100dp"/>
 
 
 
