--- a/app/src/main/res/layout-land/activity_crop_machine_manager.xml
+++ b/app/src/main/res/layout-land/activity_crop_machine_manager.xml
@@ -29,7 +29,7 @@
             android:orientation="vertical"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
-            android:layout_marginEnd="10dp">
+            android:layout_marginEnd="12dp">
 
             <TextView
 
@@ -59,7 +59,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="15dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginStart="12dp">
             <TextView
 
                 android:layout_width="wrap_content"
@@ -97,7 +98,7 @@
             android:orientation="vertical"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="12dp"
             >
 
 
@@ -133,7 +134,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="15dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginStart="12dp">
 
             <TextView
 
@@ -169,7 +171,7 @@
             android:orientation="vertical"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:layout_marginEnd="10dp">
+            android:layout_marginEnd="12dp">
 
             <TextView
 
@@ -199,7 +201,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="10dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginStart="12dp">
 
 
             <TextView
@@ -234,7 +237,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="12dp"
             android:layout_weight="1">
 
             <TextView
@@ -268,7 +271,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginBottom="10dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginStart="12dp">
 
 
                 <TextView
@@ -311,7 +315,7 @@
             android:orientation="vertical"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:layout_marginEnd="10dp">
+            android:layout_marginEnd="12dp">
 
             <TextView
 
@@ -342,7 +346,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="10dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginStart="12dp">
 
             <TextView
 
@@ -377,7 +382,7 @@
             android:orientation="vertical"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:layout_marginEnd="10dp">
+            android:layout_marginEnd="12dp">
 
             <TextView
 
