--- a/app/src/main/res/layout-land/activity_crop_payment_bill_manager.xml
+++ b/app/src/main/res/layout-land/activity_crop_payment_bill_manager.xml
@@ -18,13 +18,19 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="10dp">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp">
+                android:layout_marginEnd="12dp"
+                android:layout_weight="1">
 
                 <TextView
 
@@ -57,7 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp"
+                android:layout_marginStart="12dp"
+                android:layout_weight="1"
 
                 >
 
@@ -76,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/input_shapes_grey_spinner"
                     android:orientation="vertical"
-                    android:padding="2.4dp">
+                    android:padding="2.8dp">
                     <Spinner
                         android:id="@+id/txt_crop_payment_bill_select_bill"
                         android:layout_width="match_parent"
@@ -88,13 +95,18 @@
                         />
                 </LinearLayout>
             </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="10dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp"
-
-                >
+                android:layout_marginEnd="12dp"
+                android:layout_weight="1">
 
                 <TextView
 
@@ -111,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/input_shapes_grey_spinner"
                     android:orientation="vertical"
-                    android:padding="2.4dp">
+                    android:padding="2.8dp">
                     <Spinner
                         android:id="@+id/sp_crop_payment_bill_supplier"
                         android:layout_width="match_parent"
@@ -126,7 +138,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp"
+                android:layout_marginStart="12dp"
+                android:layout_weight="1"
                 >
 
                 <TextView
@@ -175,13 +188,19 @@
                 </LinearLayout>
 
             </LinearLayout>
-
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp">
+                android:layout_marginEnd="12dp"
+                android:layout_weight="1">
 
                 <TextView
 
@@ -198,7 +217,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/input_shapes_grey_spinner"
                     android:orientation="vertical"
-                    android:padding="2.4dp">
+                    android:padding="2.8dp">
                 <Spinner
 
                     android:id="@+id/sp_crop_payment_bill_payment_mode"
@@ -218,7 +237,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginBottom="10dp">
+                android:layout_marginStart="12dp"
+                android:layout_weight="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -249,6 +269,7 @@
                 </LinearLayout>
 
             </LinearLayout>
+        </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -299,7 +320,9 @@
                 android:drawableTint="#ffffff"
                 android:text="Save "
                 android:textAllCaps="false"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_marginStart="100dp"
+                android:layout_marginEnd="100dp"/>
 
         </LinearLayout>
     </ScrollView>
