--- a/app/src/main/res/layout-land/content_crop_inventory_spray_manager.xml
+++ b/app/src/main/res/layout-land/content_crop_inventory_spray_manager.xml
@@ -61,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                   android:layout_marginRight="8dp">
+                   android:layout_marginEnd="12dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -87,6 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
+                    android:layout_marginStart="12dp"
                     >
 
 
@@ -125,7 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:layout_marginRight="8dp">
+                    android:layout_marginEnd="12dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -150,6 +151,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
+                    android:layout_marginStart="12dp"
 
                     >
                     <TextView
@@ -207,7 +209,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:layout_marginRight="8dp">
+                    android:layout_marginEnd="12dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -232,6 +234,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
+                    android:layout_marginStart="12dp"
                    >
 
                     <TextView
@@ -343,7 +346,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
-                    android:layout_marginEnd="8dp">
+                    android:layout_marginEnd="12dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -369,7 +372,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_marginStart="12dp">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -404,7 +408,8 @@
                 android:drawableTint="#ffffff"
                 android:text="Save"
                 android:textAllCaps="false"
-
+                android:layout_marginStart="100dp"
+                android:layout_marginEnd="100dp"
                 android:textColor="#ffffff" />
         </LinearLayout>
     </ScrollView>
