--- a/app/src/main/res/layout-sw600dp/activity_crops_manager.xml
+++ b/app/src/main/res/layout-sw600dp/activity_crops_manager.xml
@@ -553,14 +553,14 @@
                 android:textColor="@color/textColor"
 
                 android:textSize="16sp"
-                android:layout_weight="0.2"/>
+                android:layout_weight="1"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:background="#F5F5F5"
-                android:layout_weight="0.8">
+                android:layout_weight="1">
 
 
                 <TextView
@@ -618,9 +618,7 @@
             android:drawableTint="#ffffff"
             android:text="Save "
             android:textAllCaps="false"
-            android:textColor="#ffffff"
-            android:layout_marginStart="100dp"
-            android:layout_marginEnd="100dp"/>
+            android:textColor="#ffffff" />
 
 
 
