--- a/app/src/main/res/layout/content_crop_fields_list.xml
+++ b/app/src/main/res/layout/content_crop_fields_list.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="4dp"
+        android:paddingBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
