--- a/app/src/main/res/layout/content_crop_sales_order_manager.xml
+++ b/app/src/main/res/layout/content_crop_sales_order_manager.xml
@@ -28,19 +28,19 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="4dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.4"
-                        android:layout_margin="4dp"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="12dp"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.6"
-                            android:text="@string/customer_name"
+                           android:text="@string/customer_name"
                             android:textColor="@color/textColor"
                             android:textSize="12sp"
                             android:textStyle="bold" />
@@ -61,13 +61,12 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.6"
-                        android:layout_margin="4dp"
+                        android:layout_weight="1"
+                        android:layout_marginStart="12dp"
                         android:orientation="vertical">
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.6"
                             android:text="@string/sales_order_number"
                             android:textColor="@color/textColor"
                             android:textSize="12sp"
@@ -85,18 +84,18 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="4dp">
                     
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.6"
-                        android:layout_margin="4dp"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="12dp"
                         android:orientation="vertical">
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.6"
                             android:text="@string/reference_number"
                             android:textColor="@color/textColor"
                             android:textSize="12sp"
@@ -114,13 +113,12 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.6"
-                        android:layout_margin="4dp"
+                        android:layout_weight="1"
+                        android:layout_marginStart="12dp"
                         android:orientation="vertical">
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.6"
                             android:text="@string/sales_order_date"
                             android:textColor="@color/textColor"
                             android:textSize="12sp"
@@ -148,14 +146,13 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginEnd="12dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.6"
                             android:text="@string/shipping_date_label"
                             android:textColor="@color/textColor"
                             android:textSize="12sp"
@@ -165,7 +162,7 @@
                             android:id="@+id/txt_crop_sales_order_shipping_date"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.4"
+
                             android:background="@drawable/input_shapes_grey_spinner"
                             android:hint="Select"
                             android:inputType="none"
@@ -177,12 +174,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_marginStart="12dp">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.6"
                             android:text="@string/shipping_method"
                             android:textColor="@color/textColor"
                             android:textSize="12sp"
