--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darker_gray"
     tools:context=".fragments.HomeFragment">
 
+
+    <include
+        layout="@layout/content_dashboard"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
